--- a/_slides/17-gv9465.md
+++ b/_slides/17-gv9465.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-Caption here
+Keviin is an okay student.
 
 ![snowoctocat](https://octodex.github.com/images/snowoctocat.png)
 {: .center}
