--- a/_slides/23-zww346.md
+++ b/_slides/23-zww346.md
@@ -3,7 +3,7 @@ layout: slide
 title: "Welcome to our slide deck!"
 ---
 
-Caption here
+this is only a test
 
 ![Robotocat](https://octodex.github.com/images/Robotocat.png)
 {: .center}
